# pypip-info

./: .gitignore  README.md  main.py  pyproject.toml  run.sh
.mypy_cache/3.8/: _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  datetime.meta.json  enum.meta.json  io.meta.json  main.data.json  main.meta.json  mmap.meta.json  posix.meta.json  socket.meta.json  socketserver.data.json  socketserver.meta.json  ssl.meta.json  string.meta.json  sys.meta.json  time.meta.json  types.meta.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json  uuid.data.json  uuid.meta.json
.mypy_cache/3.8/click/: __init__.data.json  __init__.meta.json  _termui_impl.data.json  _termui_impl.meta.json  (+20 more)
frontend/: package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
pip_gui/: pypi.py
templates/: index.html
templates/css/: app.8b56c3e5.css  chunk-04d6c83c.865d4159.css  chunk-5cb7643d.d3e8c3fd.css  chunk-ccb7ddb0.35b73fbb.css  chunk-vendors.130c07f2.css  home.5c7de598.css
templates/js/: app.ca255d30.js  app.ca255d30.js.map  chunk-04d6c83c.88a8e812.js  chunk-04d6c83c.88a8e812.js.map  chunk-5cb7643d.ed942d71.js  chunk-5cb7643d.ed942d71.js.map  chunk-608ea7a5.d48bbb54.js  chunk-608ea7a5.d48bbb54.js.map  chunk-ccb7ddb0.335e7abd.js  chunk-ccb7ddb0.335e7abd.js.map  chunk-vendors.422634a9.js  chunk-vendors.422634a9.js.map  detail.6b0876aa.js  detail.6b0876aa.js.map  detail~home.4d445b80.js  detail~home.4d445b80.js.map  home.3286405c.js  home.3286405c.js.map
(+142 files in other folders)
